--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <h1>wellcom lec6</h1>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate voluptas at natus dolorum pariatur perferendis aliquam eveniet placeat? Dolor possimus recusandae quas earum quis voluptates fuga veritatis praesentium rem rerum?</p>
     <h1>firest</h1>
+    <h1>second</h1>
+    <h1>third</h1>
+    <h1>first agin</h1>
 </body>
 </html>
